--- a/DUOLEditor/DUOLEditor.vcxproj.filters
+++ b/DUOLEditor/DUOLEditor.vcxproj.filters
@@ -270,6 +270,12 @@
     <ClInclude Include="include\DUOLEditor\Util\RawTextures.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="include\DUOLEditor\Util\ImGuiNavDebugDraw.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="include\DUOLEditor\TestScripts\NavMeshTest.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\DUOLEditor\Editor.cpp">
@@ -519,6 +525,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="src\DUOLEditor\Modules\Toolbar.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLEditor\Util\ImGuiNavDebugDraw.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="src\DUOLEditor\TestScripts\NavMeshTest.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
