--- a/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj
+++ b/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj
@@ -217,6 +217,30 @@
     <ClInclude Include="include\DUOLGameEngine\Manager\TimeManager.h" />
     <ClInclude Include="include\DUOLGameEngine\Manager\UEImportor\UEImportManager.h" />
     <ClInclude Include="include\DUOLGameEngine\Manager\UEImportor\UELevelParser.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\DebugUtils\DebugDraw.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\DebugUtils\DetourDebugDraw.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\DebugUtils\RecastDebugDraw.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\DebugUtils\RecastDump.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\DetourCrowd\DetourCrowd.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\DetourCrowd\DetourLocalBoundary.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\DetourCrowd\DetourObstacleAvoidance.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\DetourCrowd\DetourPathCorridor.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\DetourCrowd\DetourPathQueue.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\DetourCrowd\DetourProximityGrid.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\DetourTileCache\DetourTileCache.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\DetourTileCache\DetourTileCacheBuilder.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\Detour\DetourAlloc.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\Detour\DetourAssert.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\Detour\DetourCommon.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\Detour\DetourMath.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\Detour\DetourNavMesh.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\Detour\DetourNavMeshBuilder.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\Detour\DetourNavMeshQuery.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\Detour\DetourNode.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\Detour\DetourStatus.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\Recast\Recast.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\Recast\RecastAlloc.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\Recast\RecastAssert.h" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\BehaviorTree.h" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\BlackBoard.h" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\ActionNode.h" />
@@ -252,8 +276,12 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\Text.h" />
     <ClInclude Include="include\DUOLGameEngine\Manager\UnityMigrator\UnityMigrator.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Object\Texture.h" />
+    <ClInclude Include="include\DUOLGameEngine\Manager\NavigationManager.h" />
+    <ClInclude Include="include\DUOLGameEngine\ECS\Component\NavMeshAgent.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGameEngine\ECS\Component\NavMeshAgent.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Manager\NavigationManager.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\Image.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\RectTransform.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\Canvas.cpp" />
@@ -301,6 +329,36 @@
     <ClCompile Include="src\DUOLGameEngine\Manager\TimeManager.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\UEImportor\UEImportManager.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\UEImportor\UELevelParser.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\DebugUtils\DebugDraw.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\DebugUtils\DetourDebugDraw.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\DebugUtils\RecastDebugDraw.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\DebugUtils\RecastDump.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\DetourCrowd\DetourCrowd.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\DetourCrowd\DetourLocalBoundary.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\DetourCrowd\DetourObstacleAvoidance.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\DetourCrowd\DetourPathCorridor.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\DetourCrowd\DetourPathQueue.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\DetourCrowd\DetourProximityGrid.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\DetourTileCache\DetourTileCache.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\DetourTileCache\DetourTileCacheBuilder.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Detour\DetourAlloc.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Detour\DetourAssert.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Detour\DetourCommon.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Detour\DetourNavMesh.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Detour\DetourNavMeshBuilder.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Detour\DetourNavMeshQuery.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Detour\DetourNode.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Recast\Recast.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Recast\RecastAlloc.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Recast\RecastArea.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Recast\RecastAssert.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Recast\RecastContour.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Recast\RecastFilter.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Recast\RecastLayers.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Recast\RecastMesh.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Recast\RecastMeshDetail.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Recast\RecastRasterization.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\Navigation\Recast\RecastRegion.cpp" />
     <ClCompile Include="src\DUOLGameEngine\StateMachine\BehaviorTree\BehaviorTree.cpp" />
     <ClCompile Include="src\DUOLGameEngine\StateMachine\BehaviorTree\BlackBoard.cpp" />
     <ClCompile Include="src\DUOLGameEngine\StateMachine\BehaviorTree\Nodes\ActionNode.cpp" />
