--- a/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj.filters
+++ b/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj.filters
@@ -186,5 +186,6 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\BehaviourBase.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\BehaviortreeController.h" />
     <ClInclude Include="include\DUOLGameEngine\StateMachine\BehaviorTree\BehaviorTreeFactory.h" />
+    <ClInclude Include="include\DUOLGameEngine\Navigation\DebugImplement\NavDebugDrawDUOL.h" />
   </ItemGroup>
 </Project>
