비헤이비어 트리 대략적으로 이식 완료.
비헤이비어 트리 대략적으로 이식 완료.
기본 노드 제작 작업 중.

--- a/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj
+++ b/DUOLGameEngine_DLL/DUOLGameEngine_DLL.vcxproj
@@ -171,6 +171,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Action_MakeNoise.h" />
+    <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Action_MoveDirectlyToward.h" />
+    <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Action_MoveTo.h" />
+    <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Action_PlayAnimation.h" />
+    <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Action_PlaySound.h" />
+    <ClInclude Include="include\DUOLGameEngine\BehaviorTreeSampleNode\Action_Wait.h" />
     <ClInclude Include="include\DUOLGameEngine\Manager\BehaviorTreeFactory.h" />
     <ClInclude Include="include\DUOLGameEngine\Navigation\DebugImplement\NavDebugDrawDUOL.h" />
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\BehaviortreeController.h" />
@@ -244,6 +250,7 @@
     <ClInclude Include="include\DUOLGameEngine\Navigation\Recast\Recast.h" />
     <ClInclude Include="include\DUOLGameEngine\Navigation\Recast\RecastAlloc.h" />
     <ClInclude Include="include\DUOLGameEngine\Navigation\Recast\RecastAssert.h" />
+    <ClInclude Include="include\DUOLGameEngine\Util\BehaviorTreeTypeConvert.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\Constants.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\Coroutine\Coroutine.h" />
     <ClInclude Include="include\DUOLGameEngine\Util\Coroutine\CoroutineHandler.h" />
@@ -266,6 +273,12 @@
     <ClInclude Include="include\DUOLGameEngine\ECS\Component\NavMeshAgent.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_MakeNoise.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_MoveDirectlyToward.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_MoveTo.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_PlayAnimation.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_PlaySound.cpp" />
+    <ClCompile Include="src\DUOLGameEngine\BehaviorTreeSampleNode\Action_Wait.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Manager\BehaviorTreeFactory.cpp" />
     <ClCompile Include="src\DUOLGameEngine\Navigation\DebugImplement\NavDebugDrawDUOL.cpp" />
     <ClCompile Include="src\DUOLGameEngine\ECS\Component\BehaviortreeController.cpp" />
